* All Adaptors: Refactored to lean more on Generics to keep focus narrow.